<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:viewBindingIgnore="true"
    tools:context=".ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="@drawable/bg_dashboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pro" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/button3"
        android:layout_width="213dp"
        android:layout_height="69dp"
        android:background="@drawable/ic_menu"
        android:fontFamily="serif"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/profileuser"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    app:srcCompat="@drawable/profile" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="295dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="60dp"
                    android:autoText="false"
                    android:fontFamily="serif"
                    android:gravity="center|fill_horizontal"
                    android:hint="@string/namauser"
                    android:textAlignment="gravity"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    app:srcCompat="@drawable/ic_baseline_email_24" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="295dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="60dp"
                    android:fontFamily="serif"
                    android:gravity="center|fill_horizontal"
                    android:hint="@string/emailuser"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    app:srcCompat="@drawable/ic_baseline_phone_android_24" />

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="295dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="60dp"
                    android:hint="@string/nohp"
                    android:gravity="center|fill_horizontal"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <Button
            android:id="@+id/btnKeluar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/round_bottom"
            android:fontFamily="serif"
            android:text="@string/logout"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>